manifests/vote/_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vote
spec:
  finalizers:
  - kubernetes
