manifests/vote/vote-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vote
  namespace: vote
spec:
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: dockersamples/examplevotingapp_vote:before
        name: vote
