manifests/vote/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: vote
spec:
  type: ClusterIP
  ports:
  - name: "result-service"
    port: 5001
    targetPort: 80
  selector:
    app: result
