manifests/vote/result-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-ingress
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local
  labels:
    app: result
  name: result
  namespace: vote
spec:
  rules:
  - host: result.sudermanjr.com
    http:
      paths:
      - backend:
          serviceName: result
          servicePort: 5001
        path: /
  tls:
  - hosts:
    - result.sudermanjr.com
    secretName: result-tls-secret
