manifests/vote/vote-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-ingress
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local
  labels:
    app: vote
  name: vote
  namespace: vote
spec:
  rules:
  - host: vote.sudermanjr.com
    http:
      paths:
      - backend:
          serviceName: vote
          servicePort: 5000
        path: /
  tls:
  - hosts:
    - vote.sudermanjr.com
    secretName: vote-tls-secret
